Fix:- axis label issue on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -98,8 +98,14 @@
     width: 100%;
     margin: auto;
   }
+  .chart-wrapper #bottom-axis-container div svg {
+    height: 25px;
+  }
+  .chart-wrapper #bottom-axis-container div svg text{
+    font-size: 5px;
+  }
 }
 
 #bottom-axis-container div svg {
-  height: 25px
+  height: 25px;
 }
